# brainfuck-interpreter

./: Cargo.toml  LICENSE  README.md
.github/workflows/: development.yml  test.yml
crates/bf-exec/: Cargo.toml
crates/bf-exec/benches/: hanoi.rs  mandelbrot.rs  squares.rs
crates/bf-exec/src/: lib.rs  main.rs
crates/bf-repl/: Cargo.toml
crates/bf-repl/src/: lib.rs  main.rs
crates/bf-repl/src/command/: mod.rs
crates/bf-repl/src/command/add/: mod.rs
crates/bf-repl/src/command/get/: mod.rs
crates/bf-repl/src/command/help/: mod.rs
crates/bf-repl/src/command/position/: mod.rs
crates/bf-repl/src/command/run/: mod.rs
crates/bf-repl/src/command/set/: mod.rs
crates/bf-repl/src/command/view/: mod.rs
crates/bf-repl/src/interpreter/: mod.rs
crates/bf-repl/src/parser/: mod.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/compiler/: mod.rs
crates/common/src/compiler/instruction/: mod.rs
crates/common/src/compiler/lexer/: mod.rs
crates/common/src/compiler/parser/: mod.rs
crates/common/src/execution/: mod.rs
crates/common/src/execution/context/: mod.rs
crates/common/src/execution/memory/: mod.rs
crates/common/src/execution/processor/: mod.rs
crates/common/src/execution/stream/: mod.rs
crates/common/src/interpreter/: mod.rs
crates/common/src/interpreter/context/: mod.rs
crates/common/src/lexer/: mod.rs
crates/common/src/parser/: mod.rs
crates/interpreter/: Cargo.toml
examples/: self-interpreter.bf
src/: lib.rs  main.rs
src/interpreter/: mod.rs
src/interpreter/instruction/: mod.rs
src/interpreter/memory/: mod.rs
src/interpreter/memory/config/: mod.rs
src/interpreter/memory/strategy/: mod.rs
src/interpreter/processor/: mod.rs
src/interpreter/stream/: mod.rs
src/interpreter/stream/config/: mod.rs
src/lexer/: mod.rs
src/parser/syntax/: mod.rs
(+13 files in other folders)
