[package]
name = "brainfuck-interpreter"
version = "0.1.0"
edition = "2021"
authors = ["Justin Chen (ctj12461) <ctj12461@163.com>"]
description = "A fast, powerful and configurable interpreter written in Rust"
readme = "README.md"
repository = "https://github.com/ctj12461/brainfuck-interpreter"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["cargo"] }
