[package]
name = "bf-exec"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
common = { path = "../common" }
clap = { version = "4.1.4", features = ["cargo"] }
snafu = "0.7.4"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "hanoi"
harness = false

[[bench]]
name = "squares"
harness = false

[[bench]]
name = "mandelbrot"
harness = false